log
Thu 25 Apr 2024 05:56:29 PM UTC: 
 hashmap.c | 23 +++++++++++++++++++----
 1 file changed, 19 insertions(+), 4 deletions(-)
 tests:  5|4
total_score: 30/70
9dd7c55
Thu 25 Apr 2024 05:57:15 PM UTC: 
 hashmap.c | 7 -------
 1 file changed, 7 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:65:1: error: control reaches end of non-void function [-Werror=return-type]
   65 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
1fc47b8
Thu 25 Apr 2024 05:57:31 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  4|5
total_score: 20/70
a5a7c5b
Thu 25 Apr 2024 05:58:13 PM UTC: 
 hashmap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
7c1fee1
